data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_505.wast
;; 6. **Test 6: Interleaved `nop` and Regular Instructions**    - **Constraint Check**: Confirm that interleaving `nop` with other instructions does not produce unexpected control flow changes.    - **Description**: Alternate `nop` instructions with computation and control instructions and ensure the sequence is executed in the correct order without side effects.

(assert_invalid
  (module
    (func (local i32)
      (i32.const 1)
      nop
      (i32.add (local.get 0) (i32.const 2))
      nop
      (return (i32.const 3))
      nop))
  "type mismatch"
)